# open-env-meta-final-hackathon

./: .gitignore  README.md  codex.codex_rules
3d-models/: good-sample-cad-code.md  ikea_markus_idealish_code.md
experiment-2-cadforge/: .dockerignore  .env.example  .gitignore  .openenvignore  CADFORGE_BLOG.md  README.md  __init__.py  client.py  index.html  inference.py  models.py  openenv.yaml  package-lock.json  package.json  pyproject.toml  vite.config.js
experiment-2-cadforge/data/: cad_tasks.json
experiment-2-cadforge/data/generated-assets-retry/: manifest.json
experiment-2-cadforge/data/reference-metrics/: preprocess-summary.json
experiment-2-cadforge/data/sft/: dataset_summary.json  prompt_to_cadquery_summary.json
experiment-2-cadforge/python_tools/: cadquery_code_runner.py  cadquery_env.py  cadquery_heavy_duty_hook.py
experiment-2-cadforge/python_tools/cadquery_samples/: heavy_duty_hook_query.py
experiment-2-cadforge/python_tools/mechforge/: cadquery_builder.py  load_manager.py  models.py  solver3d.py
experiment-2-cadforge/reports/: data-production-status.md  demo-four-leg-chair-agentic-improvement.md  demo-markus-chair-agentic-improvement.md  demo-robot-gripper-agentic-improvement.md
experiment-2-cadforge/server/: Dockerfile  app.py  cadforge_environment.py  index.js  mechforge_environment.py  openenv_models.py
experiment-2-cadforge/src/: main.js  scadRenderer.js  styles.css
experiment-2-cadforge/training/: RUNPOD_SMOKE_REPORT.md  cadforge_openenv_training_colab.ipynb  smoke_cadforge_reward.py  train_grpo_cadforge.py  train_sft_unsloth.py
(+216 files in other folders)
